code validator added

--- a/TypeScript/index.html
+++ b/TypeScript/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 
-    <script async src="dest/js/scripts.compiled.js"></script>
+    <script src="dest/js/scripts.compiled.js"></script>
 </body>
 </html>
